security5에서 6으로 전환
스프링부트 3버전에 맞춰 시큐리티 6으로 코드로 변화

--- a/springCloud/apigateway-service/src/main/resources/application.yml
+++ b/springCloud/apigateway-service/src/main/resources/application.yml
@@ -25,6 +25,10 @@ spring:
           uri: lb://USER-SERVICE
           predicates:
             - Path=/user-service/**
+            - Method=POST
+          filters:
+            - RemoveRequestHeader=Cookie
+            - RewritePath=/user-service/(?<segment>.*),/&\{segment}
         - id: catalog-service
           uri: lb://CATALOG-SERVICE
           predicates:
